--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.2.4",
     "next-auth": "^4.21.1",
     "next-connect": "^0.13.0",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
